; ModuleID = '/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sndblst.old/extr_card.c_SetOutputSampleRate.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/multimedia/audio/sndblst.old/extr_card.c_SetOutputSampleRate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Setting output sample rate\0A\00", align 1
@SB_SET_OUTPUT_RATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetOutputSampleRate(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = call i32 @DPRINT(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @SB_SET_OUTPUT_RATE, align 4
  %9 = call i32 @SB_WRITE_BYTE(i32 %7, i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = sdiv i32 %11, 256
  %13 = call i32 @SB_WRITE_BYTE(i32 %10, i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = srem i32 %15, 256
  %17 = call i32 @SB_WRITE_BYTE(i32 %14, i32 %16)
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @DPRINT(i8*) #1

declare dso_local i32 @SB_WRITE_BYTE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
